<resources>
    <string name="app_name">Story App</string>
    <string name="logout">Logout</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="not_have_account">Don\'t have an account yet? Please Register</string>
    <string name="label_must_fill">Required</string>
    <string name="add_story">Add Story</string>
    <string name="credentials_error">Incorrect Email or Password</string>
    <string name="validation">Already have an account? Please login</string>
    <string name="here">Here</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_description">Enter Description</string>
    <string name="photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="latitude_longitude">latitude longitude</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="contact_me">Contact Me</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="icon_empty">Icon Empty</string>
    <string name="empty_message">No Data</string>
    <string name="hello_blank_fragment">halo</string>
    <string name="custom_ui">Custom Ui</string>
    <string name="choose_language_menu">Choose Language</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="biometric_auth">Biometric Auth</string>
    <string name="login_with_biometric">login with biometric</string>
    <string name="no_biometric">Sorry, your smartphone doesn\'t support biometrics</string>
    <string name="support_biometric">Your smartphone supports biometrics</string>
    <string name="biometric_tidak_sesuai">Biometrics don\'t match</string>
</resources>