<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="hasBiometric"
            type="Boolean" />

        <variable
            name="viewModel"
            type="com.nandaadisaputra.storyapp.ui.activity.login.LoginViewModel" />

        <variable
            name="adapter"
            type="com.nuryazid.core.base.adapter.CoreListAdapter" />

        <variable
            name="activity"
            type="com.nandaadisaputra.storyapp.ui.activity.login.LoginActivity" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_background"
            tools:context=".ui.login.LoginActivity">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:orientation="vertical"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login">

                <com.nandaadisaputra.storyapp.ui.custom.EmailEditText
                    android:id="@+id/edt_email"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:background="@drawable/et_custom"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ems="10"
                    android:hint="@string/enter_email"
                    android:minHeight="@dimen/_48sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/color_orange_text"
                    android:textColorHint="@color/color_orange_text"
                    android:textSize="@dimen/_16ssp" />

                <com.nandaadisaputra.storyapp.ui.custom.PasswordEditText
                    android:id="@+id/edt_password"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:alpha="0"
                    android:background="@drawable/et_custom"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:maxLength="16"
                    android:fontFamily="@font/medium"
                    android:minHeight="@dimen/_48sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:textColor="@color/color_orange_text"
                    android:textColorHint="@color/color_orange_text"
                    android:textSize="@dimen/_16ssp" />

                <com.nandaadisaputra.storyapp.ui.custom.LoginButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:onClick="onClick"
                    android:background="@drawable/btn_costume"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btn_biometric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:onClick="onClick"
                    android:text="@string/login_with_biometric"
                    android:textSize="@dimen/_13ssp"
                    android:visibility='@{hasBiometric ? View.VISIBLE : View.VISIBLE}' />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/credentials_error"
                    android:textAlignment="center"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/text_red"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:alpha="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout">

                <TextView
                    android:id="@+id/tv_validation_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:fontFamily="@font/medium"
                    android:text="@string/not_have_account"
                    android:textColor="@color/color_orange_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_register_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/here"
                    android:onClick="onClick"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/color_red_orange_text"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_login"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:alpha="0"
                android:contentDescription="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anime_top"
                app:srcCompat="@drawable/icon_login" />

            <ImageView
                android:id="@+id/anime_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/image_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/anime_login_top" />

            <ImageView
                android:id="@+id/anime_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintTop_toBottomOf="@id/ly_register_text"
                app:srcCompat="@drawable/anime_login_bottom" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:alpha="0"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_red_orange_text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_login" />

            <ProgressBar
                android:id="@+id/login_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>