<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="enableBiometric"
            type="Boolean" />

        <variable
            name="hasBiometric"
            type="Boolean" />

        <variable
            name="activity"
            type="com.nandaadisaputra.storyapp.ui.activity.setting.SettingActivity" />

        <import type="android.view.View" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_background"
        tools:context=".ui.activity.settings.SettingsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_orange_background"
            app:navigationIcon="@drawable/ic_back"
            app:title="Setting"
            app:titleTextColor="@color/color_white_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/color_orange_text"
                android:text="@string/biometric_auth"
                app:layout_constraintBottom_toTopOf="@id/btn_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/switch_biometric"
                app:layout_constraintTop_toBottomOf="@id/toolbar_setting"/>

            <Switch
                android:id="@+id/switch_biometric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_8sdp"
                android:thumb="@drawable/ic_dark_mode"
                android:checked='@{enableBiometric}'
                android:visibility='@{hasBiometric ? View.VISIBLE : View.VISIBLE}'
                android:thumbTint="@color/thumbTintMoon"
                android:layout_gravity="end"
                android:track="@drawable/bg_switch_dark_mode"
                app:layout_constraintStart_toEndOf="@id/text_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_setting"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="choose_language"
            android:padding="@dimen/_12sdp"
            android:text="@string/choose_language_menu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_biometric"/>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="logout"
            android:padding="@dimen/_12sdp"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_language" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>